# connector-party

./: .pre-commit-config.yaml  Makefile  README.md  __main__.py  conftest.py  examples.py  jira_example.py  jiraretriever.py  mypy.ini  pyproject.toml  requirements.txt  schemas.py  setup.cfg  tox.ini
.github/workflows/: python-testing.yaml
connector_party/: __init__.py  database.py  jiraretriever.py  schemas.py
src/: __main__.py
src/connector_party/: jiraretriever.py  schemas.py
tests/: test_jira_retriever.py
