[tool.poetry]
name = "connector-party"
version = "0.5.0"
description = "Package with third-party connectors."
authors = ["Jitse-Jan <code@jitsejan.com>"]
license = "BSD"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.3"
pydantic = "^1.8.1"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
