[tool.poetry]
name = "connector-party"
version = "0.7.0"
description = "Package with third-party connectors."
authors = ["Jitse-Jan <code@jitsejan.com>"]
license = "BSD"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.3"
pydantic = "^1.8.1"
requests = "^2.25.1"
typed-ast = "^1.5.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
black = "^20.8b1"
isort = "^5.8.0"
flake8 = "^3.9.0"
tox = "^3.24.4"
pre-commit = "^2.15.0"
pytest-cov = "^2.12.1"
pydocstyle = "^6.1.1"
pylint = "^2.11.0"
bandit = "^1.7.0"
types-requests = "^2.25.6"
mypy = "0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
