[metadata]
name = connector-party-jitsejan
version = 0.0.5
author = Jitse-Jan
author_email = code@jitsejan.com
description = A package that connects to different third parties.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jitsejan/connector-party
project_urls =
    Bug Tracker = https://github.com/jitsejan/connector-party/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
install_requires =
    pydantic >= '1.8.1'
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src